templates/fluid_template.yaml
---
# Source: fluid/templates/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluid-pod-admission-webhook
  namespace: fluid-system
spec:
  ports:
    - name: https-rest
      port: 9443
      targetPort: 9443
  selector:
    control-plane: fluid-webhook
---
# Source: fluid/templates/csi/daemonset.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: csi-nodeplugin-fluid
  namespace: fluid-system
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: csi-nodeplugin-fluid
  template:
    metadata:
      labels:
        app: csi-nodeplugin-fluid
    spec:
      tolerations:
      - operator: Exists
      #priorityClassName: system-node-critical
      hostNetwork: true
      hostPID: true
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: NotIn
                values:
                - virtual-kubelet
      containers:
        - name: node-driver-registrar
          image: "registry.aliyuncs.com/acs/csi-node-driver-registrar:v1.2.0"
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "rm -rf /registration/fluid /registration/fuse.csi.fluid.io-reg.sock"]
          args:
            - --v=5
            - --csi-address=/var/lib/kubelet/csi-plugins/fuse.csi.fluid.io/csi.sock
            - --kubelet-registration-path=/var/lib/kubelet/csi-plugins/fuse.csi.fluid.io/csi.sock
          volumeMounts:
            - name: kubelet-dir
              mountPath: /var/lib/kubelet
            - name: registration-dir
              mountPath: /registration
        - name: plugins
          securityContext:
            privileged: true
            runAsUser: 0
            capabilities:
              add: ["SYS_ADMIN"]
            allowPrivilegeEscalation: true
          image: "fluidcloudnative/fluid-csi:v0.6.0-48de610"
          command: ["/usr/local/bin/entrypoint.sh"]
          args :
            - "--nodeid=$(NODE_ID)"
            - "--endpoint=$(CSI_ENDPOINT)"
            - --v=5
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: plugin-dir
              mountPath: /plugin
            - name: kubelet-dir
              mountPath: /var/lib/kubelet
              mountPropagation: "Bidirectional"
            - name: fluid-src-dir
              mountPath: "/runtime-mnt"
              mountPropagation: "Bidirectional"
      volumes:
        - name: kubelet-dir
          hostPath:
            path: /var/lib/kubelet
            type: Directory
        - name: plugin-dir
          hostPath:
            path: /var/lib/kubelet/plugins/csi-fluid-plugin
            type: DirectoryOrCreate
        - hostPath:
            path: /var/lib/kubelet/plugins_registry
            type: DirectoryOrCreate
          name: registration-dir
        - hostPath:
            path: "/runtime-mnt"
            type: DirectoryOrCreate
          name: fluid-src-dir
---
# Source: fluid/templates/controller/alluxioruntime_controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alluxioruntime-controller
  namespace: fluid-system
  labels:
    control-plane: alluxioruntime-controller
spec:
  selector:
    matchLabels:
      control-plane: alluxioruntime-controller
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: alluxioruntime-controller
    spec:
      serviceAccountName: alluxioruntime-controller
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: NotIn
                values:
                - virtual-kubelet
      tolerations:
      - operator: Exists
      #hostNetwork: true
      containers:
      - image: "fluidcloudnative/alluxioruntime-controller:v0.6.0-48de610"
        name: manager
        command: ["alluxioruntime-controller", "start"]
        args:
          - --development=false
          - --runtime-node-port-range=20000-26000
          - --runtime-workers=3
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 1536Mi
          requests:
            cpu: 100m
            memory: 200Mi
      terminationGracePeriodSeconds: 10
---
# Source: fluid/templates/controller/dataset_controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataset-controller
  namespace: fluid-system
  labels:
    control-plane: dataset-controller
spec:
  selector:
    matchLabels:
      control-plane: dataset-controller
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: dataset-controller
    spec:
      serviceAccountName: dataset-controller
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: NotIn
                values:
                - virtual-kubelet
      tolerations:
      - operator: Exists
      #hostNetwork: true
      containers:
      - image: "fluidcloudnative/dataset-controller:v0.6.0-48de610"
        name: manager
        command: ["dataset-controller", "start"]
        args:
          - --development=false
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 1536Mi
          requests:
            cpu: 100m
            memory: 200Mi
      terminationGracePeriodSeconds: 10
---
# Source: fluid/templates/webhook/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluid-webhook
  namespace: fluid-system
  labels:
    control-plane: fluid-webhook
spec:
  selector:
    matchLabels:
      control-plane: fluid-webhook
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: fluid-webhook
    spec:
      serviceAccountName: fluid-webhook
      containers:
        - image: "fluidcloudnative/fluid-webhook:v0.6.0-48de610"
          name: manager
          command: ["fluid-webhook", "start"]
          args:
            - --development=false
          ports:
            - containerPort: 8080
              name: metrics
              protocol: TCP
---
# Source: fluid/templates/controller/dataset_controller.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   labels:
#     control-plane: controller
#   name: fluid-system
---
# Source: fluid/templates/webhook/webhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: fluid-pod-admission-webhook
webhooks:
  - name: schedulepod.fluid.io
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE","UPDATE"]
        resources:   ["pods"]
    clientConfig:
      service:
        namespace: fluid-system
        name: fluid-pod-admission-webhook
        path: "/mutate-fluid-io-v1alpha1-schedulepod"
        port: 9443
      caBundle: Cg==
    timeoutSeconds: 20
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        fluid.io/enable-injection: "true"
